src/objects/ICG_GxA_Integration_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>ONE Source Object to host all the params needed for the GxA Integration, that can change between environments and do not have to be deployed.</description>
    <fields>
        <fullName>Base_Path__c</fullName>
        <defaultValue>&quot;SmartFacilityRemoteValidations/&quot;</defaultValue>
        <description>Base Path to search files in Amazon S3</description>
        <label>Base Path</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bucket__c</fullName>
        <description>Bucket</description>
        <label>Bucket to use in Amazon S3</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Folder_Test__c</fullName>
        <description>NOTE: Only for test purpose.
If this field is populated, the gxa integration will be use this value as the folder where the Index_File__c will be searched.</description>
        <label>Folder Test</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Index_File__c</fullName>
        <defaultValue>&quot;Result.json&quot;</defaultValue>
        <description>Name of the file stored in Amazon S3 which contains all the files required for the integration</description>
        <label>Index File</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mapping_Version__c</fullName>
        <description>Mapping version to use in the GxA integration.

If the value is undefined or not mismatch with the field Version__c in the records of ICG_GxA_Integration_Mapping__c, the integration with gxa will not executed.</description>
        <label>Mapping Version</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Named_Credential__c</fullName>
        <defaultValue>&quot;CW_AWS_S3_REMOTE_VALIDATIONS&quot;</defaultValue>
        <description>Name of the Named Credential used to connect to Amazon S3</description>
        <label>Named Credential</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Status_Needs_Correction__c</fullName>
        <defaultValue>&quot;RV_NeedsCorrection&quot;</defaultValue>
        <description>Status that indicates a remote validation needs correction</description>
        <label>Order Status Needs Correction</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Status_Pending_Fulfillment__c</fullName>
        <defaultValue>&quot;RV_Created&quot;</defaultValue>
        <description>Status that indicates a remote validation is pending for fulfillment</description>
        <label>Order Status Pending for Fulfillment</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Status_Submitted__c</fullName>
        <defaultValue>&quot;RV_WIP&quot;</defaultValue>
        <description>Status that indicates a remote validation is being reviewed by GxA</description>
        <label>Order Status Submitted</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Status_To_Start_Process__c</fullName>
        <defaultValue>&quot;RV_Complete&quot;</defaultValue>
        <description>Status that must have the order to start the process</description>
        <label>Order Status To Start Process</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>OS GxA Integration Settings</label>
</CustomObject>